[gd_scene load_steps=2 format=3 uid="uid://5u6g4ldrk4xy"]

[ext_resource type="Script" path="res://Objects/WinScreen/win_screen.gd" id="1_0i7gt"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0i7gt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -25.0
offset_right = 35.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WinnerText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Winner!
"
horizontal_alignment = 1

[node name="WinnerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cameron"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Rematch" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Rematch"

[node name="MainMenu" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Main Menu
"

[connection signal="pressed" from="VBoxContainer/Buttons/Rematch" to="." method="_on_rematch_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
